<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.veryfargo.gradeCalculatorTest.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello, George, you got a &quot;A&quot;!" android:id="@+id/tvMessage"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName" android:layout_below="@+id/tvMessage"
        android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
        android:hint="Enter your name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etScore" android:layout_alignTop="@+id/etName"
        android:layout_toRightOf="@+id/etName" android:layout_toEndOf="@+id/etName"
        android:hint="Score"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What Is My Grade?"
        android:id="@+id/btnGrade"
        android:layout_alignRight="@+id/etName"
        android:layout_alignEnd="@+id/etName" android:gravity="center_vertical"
        android:layout_below="@+id/etName" android:nestedScrollingEnabled="false"
        />

</RelativeLayout>
